charts/sessionspaces/test-policy/pod-hostpath-without-directory/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-hostpath-without-directory
spec:
  steps:
  - try:
    - apply:
        resource:
          apiVersion: v1
          kind: Namespace
          metadata:
            name: pod-hostpath-without-directory
            labels:
              app.kubernetes.io/managed-by: sessionspaces
    - apply:
        resource:
          apiVersion: v1
          kind: ConfigMap
          metadata:
            name: sessionspaces
            namespace: pod-hostpath-without-directory
            labels:
              app.kubernetes.io/managed-by: sessionspaces
          data:
            gid: "1234"
    - create:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: allowed
            namespace: pod-hostpath-without-directory
          spec:
            containers:
            - name: nginx
              image: nginx:latest
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: disallowed-any-path
            namespace: pod-hostpath-without-directory
          spec:
            containers:
            - name: nginx
              image: nginx:latest
            volumes:
            - name: test-volume
              hostPath:
                path: "/any/path"
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: disallowed-empty-path
            namespace: pod-hostpath-without-directory
          spec:
            containers:
            - name: nginx
              image: nginx:latest
            volumes:
            - name: test-volume
              hostPath:
                path: ""
